fix: white space in small screen

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 body,
 html {
 	font-family: 'Figtree', sans-serif;
+	background-color: #e9eff2;
 }
 
 .App {
