--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -31,7 +31,7 @@
 
 @media (min-width: 768px) {
 	.editor {
-		height: 100%;
+		height: 100vh;
 		display: flex;
 		flex-direction: row;
 	}
